**********************************************************************************************
digiKam 0.9.5 - Release date: 2009-03-15

NEW FEATURES: 

General        : Internal CImg library updated to 1.3.0.

BUGFIXES FROM KDE BUGZILLA (alias B.K.O | http://bugs.kde.org):

001 ==> 169037 : Crash when tagging photos.
002 ==> 173314 : digiKam crashes while exiting the photo-editing mode in KDE 3.5.10.
003 ==> 185279 : Raw pictures from Panasonic LX2 have totally wrong colours in digikam show modus.

**********************************************************************************************
digiKam 0.9.5-beta3 - Release date: 2009-01-27

NEW FEATURES: 

Image Editor   : New composition guide based on Diagonal Rules.

BUGFIXES FROM KDE BUGZILLA (alias B.K.O | http://bugs.kde.org):

001 ==> 176477 : Files disappear while importing.
002 ==> 179134 : Compile-error with libkdcraw > 0.1.5.
003 ==> 162535 : Startup is extremely slow when famd is running.
004 ==> 179413 : Support restoring blown out highlights.
005 ==> 157313 : Option to reposition lighttable slide-list.
006 ==> 180671 : Scanner import does not work.
007 ==> 175387 : digikam-doc 0.9.4 sf.net tarball is outdated.
008 ==> 181712 : Ubuntu 8.10 - digiKam finds not the correct images.

**********************************************************************************************
digiKam 0.9.5-beta2 - Release date: 2008-12-14

NEW FEATURES:

BUGFIXES FROM KDE BUGZILLA (alias B.K.O | http://bugs.kde.org):

001 ==> 164573 : Better support for small screens.
002 ==> 175970 : digitaglinktree merges tags with same name in different subfolders.
003 ==> 108760 : Use collection image (or part of) as Tag/Album icon.
004 ==> 144078 : very slow avi startup.
005 ==> 146258 : Moving an album into waste basket didn't remove.
006 ==> 149165 : cannot edit anymore - sqlite lock?
007 ==> 146025 : Wrong image name when using info from EXIF.
008 ==> 167056 : Updating tags is slow when thumbnails are visible.