@@ -1,7 +1,7 @@
 Begin3
 Title:          digiKam
-Version:        0.9.5
-Entered-date:   2009-03-15
+Version:        0.9.6
+Entered-date:   2009-xx-xx
 Description:    Photo Management Program
 Keywords:       Digital Still Camera, KDE, Graphics, Image Viewer, Image Editor, Light Table, Time Line, Digital Camera Interface, Gphoto, Digital Photo Management, Search, Rating, Tags, Comments, Exif, Iptc, Makenotes, Geolocation, Batch process, Raw workflow
 Author:         Gilles Caulier <caulier dot gilles at gmail dot com>, 
