@@ -1,4 +1,12 @@
 **********************************************************************************************
+digiKam 0.9.6 - Release date: 2009-xx-xx
+
+NEW FEATURES: 
+
+BUGFIXES FROM KDE BUGZILLA (alias B.K.O | http://bugs.kde.org):
+
+
+**********************************************************************************************
 digiKam 0.9.5 - Release date: 2009-03-15
 
 NEW FEATURES: 
